assets/custom.css
/* Override detault balises */
html,
body {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  font-family: Verdana;
  font-size: 16px;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  outline: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Montserrat;
}

h1,
h2 {
  font-size: 60pt;
  margin: 20px 0 10px 0;
}

h3 {
  font-size: 40pt;
  margin: 20px 0 10px 0;
}

ul {
  margin: 0;
  padding: 0;
}

a, a:hover {
  color: black;
  text-decoration: none;
}

p {
  color: #787878;
}

li {
  list-style-type: none;
}

address {
  font-style: normal;
}

/* CSS for text */

.plus:before {
  content: "+ ";
}

/* CSS for Navigation Bar */
nav {
  position: sticky;
  top: 0px;
  height: 4.5rem;
  padding: 1.25em 0;
  overflow: hidden;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
  gap: 6.25rem
}

nav li {
  list-style-type: none;
}

nav li a {
  display: inline-block;
  width: 6.25rem;
  padding: 2px;
  color: #787878;
  border: 2px solid transparent;
}

nav li a:hover {
  color: black;
  border: 2px solid black;
  border-radius: 25px;
}


nav ul {
  height: 2rem;
}

nav li:not(.menu-element) {
  display: none;
  width: 20px;
}

nav .logo {
  height: 2rem;
}

/* CSS for Index Page */
.banner {
  min-height: calc(100vh - 4.5rem);
  padding: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.banner .title {
  text-align: center;
  font-weight: bold;
  font-family: Montserrat;
}

.banner h1.title {
  font-size: 60pt;
  margin: 20px 0 10px 0;
}

.banner h2.title {
  font-size: 40pt;
  margin: 20px 0 10px 0;
}

/* CSS for Website Footer */
footer {
  background-color: black;
}

footer p {
  margin: 0;
}

footer *, footer a:hover {
  color: white;
}

#footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 2%;
  padding: 4em 8em;
  margin: auto;
  max-width: 1600px;
  line-height: 1.4;
}

#footer > div {
  flex-basis: 31%;
}

#footer-logo {
  padding: 0;
}

#company-details a, #credit a {
  text-decoration: underline;
}

#credit {
  padding: 0.5em;
  text-align: center;
  font-size: 14px;
}

